# CarbonSol

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  start.sh
.github/workflows/: ci.yml
CarbonSol/: __init__.py
CarbonSol/ai-models/: __init__.py  api.py  carbon_footprint.py  price_prediction.py  project_analyzer.py  requirements.txt
CarbonSol/ai-models/tests/: __init__.py  run_tests.py  test_api.py  test_carbon_footprint.py  test_price_prediction.py  test_project_analyzer.py
CarbonSol/contracts/: README.md  cst_token.rs  dex.rs  vcu_token.rs
CarbonSol/contracts/cst_token/: Cargo.toml
CarbonSol/contracts/dex/: Cargo.toml
CarbonSol/contracts/vcu_token/: Cargo.toml
CarbonSol/frontend/: App.js  README.md  config.js  index.js  package.json
CarbonSol/frontend/components/: CarbonFootprintCalculator.js  Footer.js  Navbar.js
CarbonSol/frontend/hooks/: useWalletBalance.js
CarbonSol/frontend/pages/: About.js  Dashboard.js  Home.js  Trade.js
CarbonSol/frontend/services/: api.js
CarbonSol/frontend/styles/: About.css  App.css  CarbonCalculator.css  Dashboard.css  Trade.css
CarbonSol/frontend/utils/: formatters.js
CarbonSol/scripts/: deploy.sh  setup.sh
ai-models/: api.py  price_prediction.py  requirements.txt
contracts/: README.md
contracts/cst_token/: Cargo.toml
contracts/cst_token/src/: lib.rs
contracts/dex/: Cargo.toml
contracts/dex/src/: lib.rs
contracts/vcu_token/: Cargo.toml
contracts/vcu_token/src/: lib.rs
docs/: api_reference.md  developer_guide.md
frontend/: package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Footer.js  Navbar.js
frontend/src/hooks/: index.js  useApi.js  useCarbonData.js  useForm.js  useLocalStorage.js  useNotification.js  useTheme.js  useWalletBalance.js  useWindowSize.js
frontend/src/pages/: About.js  CarbonFootprint.js  CarbonProjects.js  Dashboard.js  Home.js  MyWallet.js  Trade.js
frontend/src/services/: api.js
frontend/src/utils/: api.js  constants.js  format.js  helpers.js  index.js  solana.js  validation.js
scripts/: deploy.sh
